XO_Project_UAT/Project--XOGrp--UAT/src/objects/NVMStatsSF__NVM_Call_Summary__c.object
<CustomObject>
    <fields>
        <fullName>After_Call_Work_Time_Hours__c</fullName>
        <formula>NVMStatsSF__After_Call_Work_Time__c / 3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>After Call Work Time Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>After_Call_Work_Time_Minutes__c</fullName>
        <formula>NVMStatsSF__After_Call_Work_Time__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>After Call Work Time Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent2_Transfer_Time_Hours__c</fullName>
        <formula>NVMStatsSF__Agent2_Transfer_Time__c / 3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent2 Transfer Time Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent2_Transfer_Time_Minutes__c</fullName>
        <formula>NVMStatsSF__Agent2_Transfer_Time__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent2 Transfer Time Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent_Consult_Time_Hours__c</fullName>
        <formula>NVMStatsSF__Agent_Consult_Time__c / 3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Consult Time Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent_Consult_Time_Minutes__c</fullName>
        <formula>NVMStatsSF__Agent_Consult_Time__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Consult Time Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent_Talk_Time_Hours__c</fullName>
        <formula>NVMStatsSF__Agent_Talk_Time__c / 3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Talk Time Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent_Talk_Time_Minutes__c</fullName>
        <formula>NVMStatsSF__Agent_Talk_Time__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Talk Time Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Duration_Hours__c</fullName>
        <description>This is the call length in hours. Requested on SS-6812</description>
        <formula>NVMStatsSF__Total_Call_Duration__c / 3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Duration Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Duration_Minutes__c</fullName>
        <description>This is the call length in minutes. Requested on SS-6812</description>
        <formula>NVMStatsSF__Total_Call_Duration__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Duration Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DKey__c</fullName>
        <description>Packages versions 2.25 onward will discover this field and put the GUID into it on insert, hence causing duplicates to fail to be inserted.</description>
        <label>DKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Handle_Time_Hours__c</fullName>
        <formula>NVMStatsSF__Handle_Time__c / 3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Handle Time Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handle_Time_Minutes__c</fullName>
        <formula>NVMStatsSF__Handle_Time__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Handle Time Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hold_Time_Hours__c</fullName>
        <formula>NVMStatsSF__Consult_Time__c / 3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hold Time Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hold_Time_Minutes__c</fullName>
        <formula>NVMStatsSF__Consult_Time__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hold Time Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Abandoned__c</fullName>
        <formula>NVMStatsSF__Agent_Talk_Time__c == 0 &amp;&amp; NVMStatsSF__Post_Call_Automation__c == 0 &amp;&amp;  (TEXT(NVMStatsSF__Interaction_Type__c) == &apos;Inbound Call&apos; || TEXT(NVMStatsSF__Interaction_Type__c) == &apos;Internal Call&apos;) &amp;&amp;  NOT(NVMStatsSF__MessageTaken__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This box is checked if the Call was an abandoned Inbound or Internal Call</inlineHelpText>
        <label>Abandoned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__After_Call_Work_Time__c</fullName>
        <inlineHelpText>Amount of time last Agent spent on post Call activity</inlineHelpText>
        <label>After Call Work Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Agent2_ID__c</fullName>
        <inlineHelpText>Agent ID of the last known agent who worked on the Call/Case (if transferred)</inlineHelpText>
        <label>Agent2 ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Agent2_Transfer_Time__c</fullName>
        <inlineHelpText>Total transfer-in durations (talk events immediately following each transfer)</inlineHelpText>
        <label>Agent2 Transfer Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Agent2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Agent 2 Name</inlineHelpText>
        <label>Agent2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NVM_Call_Summaries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__AgentChkStr__c</fullName>
        <description>System Checkstring - contributions from Agent Stats feed</description>
        <inlineHelpText>System Checkstring</inlineHelpText>
        <label>AgentChkStr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Agent_Consult_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Time in seconds where additional agents were consulted but not subsequently transferred to (typically when an inbound caller is placed on hold).  See Warm Transfer Time for the duration of consultations which lead to transfers.  Counts towards Handle Time</inlineHelpText>
        <label>Agent Consult Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Agent_Event_String__c</fullName>
        <inlineHelpText>Agent events related to this call with timestamp, agenr Id and duration in seconds - helps show where consultations fited into the call.  Format yyyyMMddHHmmss-[Agent Id]-[duration],...</inlineHelpText>
        <label>Agent Event String</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Agent_List__c</fullName>
        <inlineHelpText>All agent IDs and durations where e.g. 123-30, 456-60 means agent 123 for 30s followed by agent 456 for 1 minute.  Excludes hold times</inlineHelpText>
        <label>Agent List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Agent_Percent__c</fullName>
        <inlineHelpText>Percentage of recording the Agent alone was talking</inlineHelpText>
        <label>Agent Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Agent_Phone_Number__c</fullName>
        <inlineHelpText>Phone number Agent received Call on</inlineHelpText>
        <label>Agent Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Agent_Ring_Duration__c</fullName>
        <inlineHelpText>Total number of seconds agent phones rang</inlineHelpText>
        <label>Total Ring Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Agent_Talk_Time__c</fullName>
        <inlineHelpText>Total talk time in seconds (excluding Ringing, Hold, Consult, Transfer and Post Call work time). Add this and Agent2 Transfer time for All Agent talk time</inlineHelpText>
        <label>Agent Talk Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Agent name (if known - links to User record in Salesforce)</inlineHelpText>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NVM_Call_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__AutoPhaseStart__c</fullName>
        <inlineHelpText>The start of the last Automation phase identified during the Call - if there is post Call automation, this will be used to calculate the duration</inlineHelpText>
        <label>AutoPhaseStart</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Automation_Segment__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total duration of applets (Menu, Announcements, etc.)</inlineHelpText>
        <label>Automation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__CLID__c</fullName>
        <inlineHelpText>The number presented by Caller (Caller ID)</inlineHelpText>
        <label>CLID</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__CR_Start_Immediate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if Call Recording Applet which first turns on Call Recording starts the recording without waiting for the two parties to be connected.
Use Workflow (on create+update) to set this flag for Calls which don&apos;t defer CR Start based on the NVM Service</description>
        <inlineHelpText>Checked if Call Recording Applet which first turns on Call Recording starts the recording without waiting for the two parties to be connected.
Use Workflow (on create+update) to set this flag for Calls which don&apos;t defer CR Start based on the NVM Service</inlineHelpText>
        <label>CR Start Immediate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__CallDisposition__c</fullName>
        <inlineHelpText>Call Result value copied from the Call Task if one was found</inlineHelpText>
        <label>Call Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__CallEndTime__c</fullName>
        <inlineHelpText>Date/Time stamp of Call End</inlineHelpText>
        <label>CallEndTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__CallGuid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique identifier for this Call/Case</inlineHelpText>
        <label>CallGuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__CallTime__c</fullName>
        <inlineHelpText>Date/Time stamp of Call Start (stored internally as UTC but shown in Salesforce to you in your timezone)</inlineHelpText>
        <label>CallTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Call_Recording__c</fullName>
        <inlineHelpText>URL of the Call recording</inlineHelpText>
        <label>Call Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Call_Transcription__c</fullName>
        <description>Searchable Call Transcription</description>
        <inlineHelpText>Searchable Call Transcription</inlineHelpText>
        <label>Call Transcription</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Categories__c</fullName>
        <inlineHelpText>Categories Matched in Speech Analytics</inlineHelpText>
        <label>Categories</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Channel__c</fullName>
        <inlineHelpText>Channel used to import this record. (A configured Channel is analagous to a Contact World Account accessed via a Cloud URL and specifies a time offset into the past)</inlineHelpText>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__ChkStr__c</fullName>
        <inlineHelpText>Compressed, ordered representation of all unfiltered events in an inbound Call or Case. Can be used for advanced analysis. Do not edit data in this field.</inlineHelpText>
        <label>ChkStr</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Confidence__c</fullName>
        <defaultValue>&quot;Unknown&quot;</defaultValue>
        <description>Transcription Confidence</description>
        <inlineHelpText>Transcription Confidence</inlineHelpText>
        <label>Confidence</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Consult_Time__c</fullName>
        <inlineHelpText>Total in seconds of the time the Call or Case was put on hold by the person handling it</inlineHelpText>
        <label>Hold Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Crosstalk_Percent__c</fullName>
        <inlineHelpText>Percentage of recording both connected parties were talking at once</inlineHelpText>
        <label>Crosstalk Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Customer_Percent__c</fullName>
        <inlineHelpText>Percentage of recording the Customer alone was talking</inlineHelpText>
        <label>Customer Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Date__c</fullName>
        <inlineHelpText>UTC Date of the Call</inlineHelpText>
        <label>UTC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Day_of_Week__c</fullName>
        <formula>CASE(MOD(NVMStatsSF__Date__c - DATE(1900, 1, 7), 7), 
1, &apos;1-Monday&apos;, 
2, &apos;2-Tuesday&apos;, 
3, &apos;3-Wednesday&apos;, 
4, &apos;4-Thursday&apos;, 
5, &apos;5-Friday&apos;, 
6, &apos;6-Saturday&apos;, 
0, &apos;7-Sunday&apos;, &apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Day of the week this Call or Case was received on in UTC</inlineHelpText>
        <label>UTC Day of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Delivery_Attempts__c</fullName>
        <formula>LEN(NVMStatsSF__Ring_List__c) -  LEN(SUBSTITUTE(NVMStatsSF__Ring_List__c, &quot;:&quot;, &quot;&quot;))</formula>
        <inlineHelpText>Number of ring events for Inbound Calls</inlineHelpText>
        <label>Delivery Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__EndApplet__c</fullName>
        <inlineHelpText>The final applet used on this Call/Case record</inlineHelpText>
        <label>End Applet</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__EndReason__c</fullName>
        <inlineHelpText>Final status of Call</inlineHelpText>
        <label>End Reason</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__EndRecorded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the Call End Event was received from ContactWorld; indicative of completeness of a Call Summary. The End Event for Inbound Calls and Cases conveys the total duration; if missing, duration is approximated using sub totals known.</inlineHelpText>
        <label>EndRecorded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Fiscal_Quarter__c</fullName>
        <formula>CASE(MONTH(datevalue(  NVMStatsSF__CallTime__c  )) , 
1, &quot;Q1-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), 
2, &quot;Q1-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), 
3, &quot;Q1-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), 
4, &quot;Q2-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), 
5, &quot;Q2-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), 
6, &quot;Q2-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), 
7, &quot;Q3-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), 
8, &quot;Q3-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), 
9, &quot;Q3-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), 
10, &quot;Q4-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), 
11, &quot;Q4-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), 
12, &quot;Q4-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calendar quarter of this Call</inlineHelpText>
        <label>Calendar Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Handle_Time__c</fullName>
        <formula>IF(ISPICKVAL(NVMStatsSF__Interaction_Type__c, &quot;Case&quot;),
 NVMStatsSF__Agent_Talk_Time__c +  NVMStatsSF__Agent2_Transfer_Time__c  +
 NVMStatsSF__After_Call_Work_Time__c,


 IF(ISPICKVAL(NVMStatsSF__Interaction_Type__c, &quot;Outbound Call&quot;),
  NVMStatsSF__Agent_Talk_Time__c + NVMStatsSF__Agent2_Transfer_Time__c +
  NVMStatsSF__After_Call_Work_Time__c +  NVMStatsSF__Consult_Time__c +
  NVMStatsSF__Agent_Consult_Time__c +
  NVMStatsSF__Warm_Transfer_Time__c +  NVMStatsSF__Agent_Ring_Duration__c,
   
 IF(ISPICKVAL(NVMStatsSF__Interaction_Type__c, &quot;Internal Call&quot;),
  NVMStatsSF__Agent_Talk_Time__c * 2 +
  NVMStatsSF__Agent_Consult_Time__c +
  NVMStatsSF__After_Call_Work_Time__c * 2 +
  NVMStatsSF__Agent_Ring_Duration__c,


  NVMStatsSF__Agent_Talk_Time__c + NVMStatsSF__Agent2_Transfer_Time__c + 
  NVMStatsSF__After_Call_Work_Time__c +  NVMStatsSF__Consult_Time__c +
  NVMStatsSF__Agent_Consult_Time__c +
  NVMStatsSF__Warm_Transfer_Time__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total working duration of all participating agents (i.e. Agent Talk Time + Transfer Time + Wrap + Hold + Consult Times for Calls and Working + Wrap up for Cases; Agent Handling time for Internal &amp; Outbound Calls also counts Ring time of Agent who dialled)</inlineHelpText>
        <label>Handle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Hour__c</fullName>
        <formula>IF(FLOOR ( MOD( NVMStatsSF__CallTime__c - ($System.OriginDateTime),1) *24) &lt; 10,&apos;0&apos;,&apos;&apos;) &amp; 
TEXT(FLOOR ( MOD( NVMStatsSF__CallTime__c- ($System.OriginDateTime),1) *24))</formula>
        <inlineHelpText>System hour of the day in which the Call started</inlineHelpText>
        <label>UTC Hour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Interaction_Type__c</fullName>
        <inlineHelpText>The Call or Case type, e.g. Inbound/Outbound/Case</inlineHelpText>
        <label>Interaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automated Outbound Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Key_Event_String__c</fullName>
        <inlineHelpText>System summary field of key Call events in order, derived from CheckString. Do not edit the data in this field.</inlineHelpText>
        <label>Key Event String</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Last_Agent_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to Agent Summary for the last agent to contribute an event to this Call</inlineHelpText>
        <label>Last Agent&apos;s Calls this Day</label>
        <referenceTo>NVMStatsSF__NVM_Agent_Summary__c</referenceTo>
        <relationshipLabel>Call Summaries</relationshipLabel>
        <relationshipName>NVM_Call_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Last_Ring_Duration__c</fullName>
        <formula>VALUE(RIGHT(&quot;0&quot; &amp; SUBSTITUTE(RIGHT(NVMStatsSF__Ring_List__c, 10), &quot;:&quot;, &quot;0000000000&quot;), 10))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The duration of the last ring event</inlineHelpText>
        <label>Last Ring Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Last_State__c</fullName>
        <formula>IF ( TEXT(NVMStatsSF__Interaction_Type__c) == &apos;Outbound Call&apos; || TEXT(NVMStatsSF__Interaction_Type__c) == &apos;Internal Call&apos; , TEXT(NVMStatsSF__Interaction_Type__c), 
IF ( NVMStatsSF__Total_Call_Duration__c &gt;= 0 &amp;&amp; NVMStatsSF__Agent_Talk_Time__c ==0 &amp;&amp; NVMStatsSF__Queue_Duration__c == 0 &amp;&amp; NVMStatsSF__Agent__c == null &amp;&amp; NVMStatsSF__Queue_Name__c == null &amp;&amp; NVMStatsSF__MessageTaken__c == false, &apos;Automation Abandoned&apos;, 
IF (NVMStatsSF__MessageTaken__c == true &amp;&amp; NVMStatsSF__Agent_Talk_Time__c == 0 &amp;&amp; NVMStatsSF__Queue_Duration__c == 0 &amp;&amp; NVMStatsSF__Agent__c == null &amp;&amp; NVMStatsSF__Queue_Name__c == null &amp;&amp; NVMStatsSF__Total_Call_Duration__c &gt; 0, &apos;Message Taken (A)&apos;, 
IF (NVMStatsSF__MessageTaken__c == true &amp;&amp; NVMStatsSF__Total_Call_Duration__c &gt; 0 &amp;&amp; (NVMStatsSF__Queue_Duration__c &gt; 0 || NVMStatsSF__Queue_Name__c != null) &amp;&amp; NVMStatsSF__Agent_Talk_Time__c == 0 &amp;&amp; NVMStatsSF__Agent__c == null, &apos;Message Taken (Q)&apos;, 
IF ( NVMStatsSF__Total_Call_Duration__c &gt; 0 &amp;&amp; (NVMStatsSF__Queue_Duration__c &gt; 0 || NVMStatsSF__Queue_Name__c != null) &amp;&amp; NVMStatsSF__Agent_Talk_Time__c == 0 &amp;&amp; NVMStatsSF__Agent__c == null, &apos;Queue Abandoned&apos;, 
IF (NVMStatsSF__Total_Call_Duration__c &gt; 0 &amp;&amp; NVMStatsSF__Agent_Talk_Time__c == 0 &amp;&amp; NVMStatsSF__Agent__c != null, &apos;Queue Abandoned&apos;, 
IF(NVMStatsSF__Total_Call_Duration__c &gt; 0 &amp;&amp; NVMStatsSF__Agent_Talk_Time__c &gt; 0 &amp;&amp;  CONTAINS (NVMStatsSF__Agent_List__c,&apos;CCRConnect&apos;), &apos;CCR Handled&apos;, 

IF( NVMStatsSF__Total_Call_Duration__c &gt; 0 &amp;&amp; NVMStatsSF__Agent_Talk_Time__c &gt; 0, &apos;Agent Handled&apos;, &apos;Unknown&apos;) 
)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the final state logged during this Call</inlineHelpText>
        <label>Last State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Local_Date__c</fullName>
        <inlineHelpText>Date from the perspective of the last agent&apos;s or the Company&apos;s Default TimeZone adjusted for DST if DST applied</inlineHelpText>
        <label>Local Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Local_Day_of_Week__c</fullName>
        <formula>CASE(MOD(NVMStatsSF__Local_Date__c - DATE(1900, 1, 7), 7), 
1, &apos;1-Monday&apos;, 
2, &apos;2-Tuesday&apos;, 
3, &apos;3-Wednesday&apos;, 
4, &apos;4-Thursday&apos;, 
5, &apos;5-Friday&apos;, 
6, &apos;6-Saturday&apos;, 
0, &apos;7-Sunday&apos;, &apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Day of the week in the Agent or stats-loading user&apos;s timezone</inlineHelpText>
        <label>Local Day of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Local_Hour__c</fullName>
        <defaultValue>&quot;00&quot;</defaultValue>
        <inlineHelpText>Start hour from the perspective of the last agent&apos;s or the Company&apos;s default Timezone with DST applied</inlineHelpText>
        <label>Local Hour</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Local_ISO8601_Week__c</fullName>
        <inlineHelpText>Week number in ISO8601 form of the start of the event in its local timezone</inlineHelpText>
        <label>Local ISO8601 Week</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__MessageTaken__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether a voicemail message was taken during this Call</inlineHelpText>
        <label>Message Taken</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Month_of_Year__c</fullName>
        <formula>CASE(MONTH(datevalue(  NVMStatsSF__CallTime__c )) , 
1, &quot;(01) Jan&quot;, 
2, &quot;(02) Feb&quot;, 
3, &quot;(03) Mar&quot;, 
4, &quot;(04) Apr&quot;, 
5, &quot;(05) May&quot;, 
6, &quot;(06) Jun&quot;, 
7, &quot;(07) Jul&quot;, 
8, &quot;(08) Aug&quot;, 
9, &quot;(09) Sep&quot;, 
10, &quot;(10) Oct&quot;, 
11, &quot;(11) Nov&quot;, 
12, &quot;(12) Dec&quot;, &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Month of year</inlineHelpText>
        <label>Month of Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__NVM_AgentID__c</fullName>
        <inlineHelpText>ID of the Agent who received the Call</inlineHelpText>
        <label>NVM AgentID</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__NVM_Service_Name__c</fullName>
        <inlineHelpText>The service/line name that was called</inlineHelpText>
        <label>NVM Service Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__NVM_Telephone_Number__c</fullName>
        <inlineHelpText>The telephone number dialled by the Caller for inbound calls; the number presented for outbound calls</inlineHelpText>
        <label>NVM Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__New_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Internal flag used to highlight existing summaries for whom new events have materialised</inlineHelpText>
        <label>New Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__NextTime__c</fullName>
        <inlineHelpText>Field not used</inlineHelpText>
        <label>NextTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Notes__c</fullName>
        <inlineHelpText>Custom text notes entered for this summary record</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Number_of_Applets__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of Applets run in the Interaction or Call flow</inlineHelpText>
        <label>Number of Applets</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Number_of_PCI_Transfers__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of transfers made to PCI Payment services</inlineHelpText>
        <label>Number of PCI Transfers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Number_of_Segments__c</fullName>
        <inlineHelpText>Indicates complexity of inbound interactions by counting discrete Key events for this summarised Call or Case (Key events include Queue, Talk, Hold, Retrieve, Transfer, Message, Recording, End).</inlineHelpText>
        <label>Number of Segments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Number_of_Transfers__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of ACDTransfer events completed</description>
        <label>Number of Transfers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Number_of_Transfers_to_Applet__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of times an agent transferred the interaction to an applet/queue</inlineHelpText>
        <label>Number of Transfers to Applet</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Number_of_Warm_Transfers__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of warm transfers of the interaction from one agent to another</inlineHelpText>
        <label>Number of Warm Transfers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Numeric_Wk_of_Year__c</fullName>
        <formula>VALUE( NVMStatsSF__Week_of_Year__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Simple numeric week of the year - useful for grouping in reports and charts</inlineHelpText>
        <label>Numeric Wk of Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__PCI_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Time spent in PCI Payments in seconds</inlineHelpText>
        <label>PCI Time</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Post_Call_Automation__c</fullName>
        <inlineHelpText>Duration of Applet events which took place after the agent left a Call (Especially Caller engaged in post Call survey. Tip: Label such Applets as POSTCALL in Call Plan Architect)</inlineHelpText>
        <label>Post Call Automation Segment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Queue_Duration__c</fullName>
        <inlineHelpText>Total time inbound Caller spent queuing on this Call or the total time a Case queued</inlineHelpText>
        <label>Queue Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Queue_List__c</fullName>
        <inlineHelpText>All Queues this Call/Case spent time in, in order, with the time in each. Format [Queue Name]-[Duration(s)], [Queue Name]-[Duration(s)],...</inlineHelpText>
        <label>Queue List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Queue_Name__c</fullName>
        <inlineHelpText>The name of the queue that this call was delivered to; the value &apos;Multiple&apos; denotes time spent in different named queues</inlineHelpText>
        <label>Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Account this call relates to (as indicated by a Task record whose CallObject matches the GUID from this summary)</inlineHelpText>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NVM Call Summaries</relationshipLabel>
        <relationshipName>NVM_Call_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>